Spring boot 3 oppgradering -> Fiks ktlint config *) Oppdatert kotlinVersion & kotlinxVersion *) Lagt til custom tasks for ktlint *) Oppdatert ktlint version i gradle config (0.47.1 => 0.50.0) - required kotlin version upgrade 1.7.10 => 1.9.10 *) Oppdatert build-pr.yml ktlint job *) ktlint hele prosjektet *) Additional formatting suggested by intellij accepted by ktlint